# paxby

./: .gitignore  CMakeLists.txt  README.md
include/cli/: cli.h  command.h  command_parser.h
include/commands/: commands.h
include/config/: config_json.h
include/core/: commands.h  context.h  core.h  tasks.h  tasks_json.h
include/io/: binary.h  exporter.h
include/libexample/: library.h
include/storage/: bin_task_repository.h  json.h  json_task_repository.h  storage.h  task_repository.h  tasks.h
include/utils/: storage.h  string.h
src/: main.cpp
src/cli/: CMakeLists.txt  cli.cpp  command.cpp  command_parser.cpp
src/commands/: CMakeLists.txt  commands.cpp
src/config/: CMakeLists.txt  config_json.cpp
src/core/: CMakeLists.txt  commands.cpp  core.cpp  tasks_json.cpp
src/io/: CMakeLists.txt  binary.cpp  exporter.cpp
src/libexample/: CMakeLists.txt  library.cpp
src/storage/: CMakeLists.txt  bin_repository.cpp  json.cpp  json_repository.cpp  repository.cpp  storage.cpp
src/utils/: CMakeLists.txt  storage.cpp  string.cpp
